Footer no longer overlaps over contentn

--- a/styles/index.css
+++ b/styles/index.css
@@ -3,6 +3,10 @@ div {
 	margin: 0 1em 0;
 }
 
+footer {
+	background-color: white;
+}
+
 @media screen and (orientation: portrait) {
 	.source-code-link {
 		display: none;
